Feature/profile appointment reset admin notification (#7)
* Create Student Profile / Added Some Docu

* fix appointment service

* fix build fail

* fix build failed

* testing

* update

* Add Firebase Service Account,json to .gitignore

* added : functionalities

* fix failed build

---------

Co-authored-by: NNeonael <neonaelangcayanazareno@gmail.com>